# venice

./: AA_BENCHMARK_THROUGHPUT_PHASE3_REPORT.md  AA_BOTTLENECK_PHASE2_REPORT.md  AA_BOTTLENECK_REPORT.md  AA_BOUNDED_INMEMORY_PHASE9_REPORT.md  AA_DCR_MERGE_PHASE4_REPORT.md  AA_INMEMORY_KAFKA_PHASE8_REPORT.md  AA_KAFKA_TUNING_PHASE7_REPORT.md  AA_LEADER_OTHER_AND_KAFKA_PHASE6_REPORT.md  RMD_CACHE_OPTIMIZATION_REPORT.md  aa-bottleneck-baseline.json  aa-bottleneck-hotloop-map.md  aa-bottleneck-phase2-hotloop-map.md  aa-bottleneck-phase2-result.json  aa-bottleneck-reruns.json  aa-bottleneck-test-run.pid  aa-bottleneck-v2-run.pid  aa-exp1-AC.pid  aa-phase2-build.pid  aa-phase2-itest.pid  aa-phase2-off.pid  aa-phase3-baseline.pid  aa-phase3-build.pid  aa-phase3-exp1-A.pid  aa-phase3-exp2-C.pid  aa-phase3-exp3-AC.pid  aa-phase3-exp4-ACB2.pid  aa-phase3-exp4-OFF.pid  aa-phase3-exp5-ACB4.pid  aa-phase3-itest.pid  aa-phase3-result.json  aa-phase4-itest.pid  aa-phase4-merge-map.md  aa-phase4-off.pid  aa-phase4-parser.py  aa-phase4-result.json  aa-phase4-run1.pid  aa-phase4-run2.pid  aa-phase4-run3.pid  aa-phase6-DONE.txt  aa-phase6-finalize.py  (+63 more)
aa-profile-alloc/com.linkedin.venice.benchmark.ActiveActiveIngestionBenchmark.benchmarkAAIngestion-Throughput-workloadType-PUT/: flame-alloc-forward.html  flame-alloc-reverse.html
aa-profile-cpu/com.linkedin.venice.benchmark.ActiveActiveIngestionBenchmark.benchmarkAAIngestion-Throughput-workloadType-PUT/: flame-cpu-forward.html  flame-cpu-reverse.html
aa-profile-wall/com.linkedin.venice.benchmark.ActiveActiveIngestionBenchmark.benchmarkAAIngestion-Throughput-workloadType-PUT/: flame-wall-forward.html  flame-wall-reverse.html
autoresearch/260419-1758-aa-partial-update-collection-merge/: config.md  results.tsv  session-notes.md  summary.md
autoresearch/chunked-value-read-path-fix/: GOAL.md  OUTCOME.md  iter-1-NOTES.md  iter-2-NOTES.md  iter-3-NOTES.md
autoresearch/jmh-backpressure/: GOAL.md  RESULTS.md  phase-A-NOTES.md  phase-B-NOTES.md  phase-C-NOTES.md  phase-C-rocksdb-NOTES.md
autoresearch/jmh-backpressure/data/: cfstats-iter-1-dc0.txt  cfstats-iter-1-dc1.txt  cfstats-iter-2-dc0.txt  cfstats-iter-2-dc1.txt  cfstats-iter-3-dc0.txt  cfstats-iter-3-dc1.txt  cfstats-iter-4-dc0.txt  cfstats-iter-4-dc1.txt  iter-1-MERGE_OPERAND_SWEPT.tsv  iter-2-MERGE_OPERAND_SWEPT.tsv  iter-3-MERGE_OPERAND_SWEPT.tsv  iter-4-MERGE_OPERAND_SWEPT.tsv  phase-A.tsv  phase-B.tsv  phase-C-rocksdb.tsv  phase-C.tsv
autoresearch/late-replica-bootstrap-bypass/: GOAL.md  OUTCOME.md  h5-iter-1-NOTES.md  h5-iter-2-NOTES.md  h5-iter-3-NOTES.md  h5-iter-4-NOTES.md
autoresearch/lean-aa-harness/: GOAL.md  SUCCESS.md  dep-graph.md  phase-0-progress.md  phase-1-progress.md  phase-2-progress.md  phase-3-progress.md  phase-4-progress.md  phase-5-progress.md  phase-6-progress.md
autoresearch/lean-aa-harness/data/: full-rss-PUT-2026-04-30.csv  lean-rss-PUT-2026-04-30.csv
autoresearch/mid-iter-read-latency/: GOAL.md  RESULTS.md  phase-A-NOTES.md  phase-B-NOTES.md
autoresearch/mid-iter-read-latency/data/: cell-1.tsv  cell-2.tsv  cell-3.tsv  cell-4.tsv  phase-A-smoke-summary.txt
autoresearch/partial-update-batch-pushed-keys-validation/: BLOCKED-NOTES.md  GOAL.md  OUTCOME.md  iter-1-NOTES.md  iter-2-NOTES.md  iter-3-NOTES.md
autoresearch/partial-update-followers-race-fix/: BLOCKED-NOTES-WALKDOWN.md  BLOCKED-NOTES.md  EXTRA-NOTES.md  GOAL.md  HYPOTHESIS-WALKDOWN-GOAL.md  OUTCOME.md  iter-1-NOTES.md  iter-2-NOTES.md  iter-3-NOTES.md  iter-4-NOTES.md  walk-iter-1-NOTES.md  walk-iter-2-NOTES.md  walk-iter-3-NOTES.md  walk-iter-4-NOTES.md
autoresearch/server-raw-bytes-overhead/: NOTES.md
autoresearch/vt-merge-compaction-fold/: GOAL.md  RESULTS.md  phase-A-NOTES.md  phase-B-NOTES.md  phase-C-NOTES.md  phase-D-NOTES.md
autoresearch/vt-merge-compaction-fold-native/: GOAL.md  RESULTS.md  big-record-comparison-NOTES.md  phase-A-NOTES.md  phase-B-NOTES.md  phase-C-NOTES.md  read-latency-comparison-NOTES.md
autoresearch/vt-merge-compaction-fold-native/data/: phase-A.tsv  phase-B.tsv  phase-C.tsv
autoresearch/vt-merge-compaction-fold-native/native-src/: .gitignore  CMakeLists.txt  venice_jni_bridge.cpp  venice_rocksdb_fold.cpp
autoresearch/vt-merge-compaction-fold/data/: phase-A.tsv  phase-B-iter-1-MERGE_OPERAND_SWEPT.tsv  phase-B-iter-1-dc0.txt  phase-B-iter-1-dc1.txt  phase-B-iter-2-MERGE_OPERAND_SWEPT.tsv  phase-B-iter-2-dc0.txt  phase-B-iter-2-dc1.txt  phase-B.tsv  (+20 more)
autoresearch/vt-merge-cross-dc-fix/: GOAL.md  OUTCOME.md  iter-1-NOTES.md  iter-2-NOTES.md  iter-3-NOTES.md  iter-4-NOTES.md  iter-5-NOTES.md  iter-6-NOTES.md  iter-7-NOTES.md
autoresearch/vt-merge-rmd-aware-fold/: GOAL.md  OUTCOME.md  iter-1-NOTES.md  iter-2-NOTES.md  iter-3-NOTES.md  iter-4-NOTES.md  iter-5-NOTES.md  iter-6-NOTES.md
autoresearch/vt-merge-rmd-cache-and-safety/: GOAL.md  OUTCOME.md  iter-1-1-NOTES.md  iter-1-2-NOTES.md  iter-2a-1-NOTES.md  iter-2b-1-NOTES.md  iter-3-1-NOTES.md
autoresearch/vt-rocksdb-merge/: GOAL.md  SUCCESS.md  phase-0-progress.md  phase-1-progress.md  phase-2-progress.md  phase-3-decision.md
autoresearch/vt-rocksdb-merge-correctness/: GOAL.md  OUTCOME.md  iter-10-NOTES.md  iter-11-NOTES.md  phase-A-progress.md  phase-B-progress.md  phase-C-progress-update.md  phase-C-progress.md
internal/venice-test-common/: build.gradle
(+111 files in other folders)
